# crystals

./: .buildinfo  .gitignore  2019-MinGW.html  CMakeLists.txt  Jenkinsfile  README.md  cameron.html  crystalsmanual.html  genindex.html  gitstat.txt  index.html  objects.inv  search.html  searchindex.js  userguide.html
.doctrees/: cameron.doctree  crystalsmanual.doctree  environment.pickle  index.doctree  userguide.doctree
.doctrees/crystals/: analysis.doctree  fourier.doctree  initial.doctree  intro.doctree  matrix.doctree  obsolete.doctree  parameters.doctree  reflectiondata.doctree  secret.doctree  sfls.doctree  twin.doctree
.doctrees/userguide/: commandline.doctree  examples.doctree  faqs.doctree  gettingstarted.doctree  install.doctree  userinterface.doctree
.github/workflows/: CI-ifx.yml  CI-intel-python.yml  CI-intel.yml  ci-ifx.yml  ci-linux.yml  ci-mingw.yml  ci-windows-mingw.yml  codeql-analysis.yml  docs.yml  main.yml  note-link-janitor-gh-action-workflow.yml
_static/: documentation_options.js
bits/: CMakeLists.txt
bits/Diffractometers/: CMakeLists.txt  ciftbx.cmn  datain.for  diffin.F
bits/cif2cry/: CMakeLists.txt  cif2cry.F
bits/convplat/: CMakeLists.txt  convplat.F
bits/csd2cry/: CMakeLists.txt
bits/delred/: CMakeLists.txt
bits/edma/: CMakeLists.txt
bits/foxman/: CMakeLists.txt
bits/hklf5/: CMakeLists.txt  Twin_rot.docx  ctwin.F  hklf52cry.F  tlaw.F
bits/loader/: CMakeLists.txt  crysload.cc
bits/newloader/: listtest.cpp  listtest.rc  makefile.gcc
bits/parst/: CMakeLists.txt  parst-98.F
bits/reindex/: CMakeLists.txt
bits/shelx2cry/: CMakeLists.txt  build.sh  crystal_data.F90  shelx2cry.F90  shelx2cry_cif.F90  shelx2cry_dict.F90  shelx2cry_mod.F90  shelx_procedures.F90
bits/shelxs/: CMakeLists.txt  make.bat
bits/sir92/: CMakeLists.txt
bits/superflip/: CMakeLists.txt
cameron/: CMakeLists.txt  block.F  ccontrol.F  comm.F  cspecific.F  maths2.F  mouse.F  outer.F
crystals/: CAMANA.INC  CAMBTN.INC  CAMDAT.INC  CAMGRP.INC  CAMPAR.INC  CMakeLists.txt  ICOM40.INC  IDIMLX.INC  KCHAR.INC  KCHAR.INC.F90  QLST40.INC  REGTMP.INC  STORE.INC.F90  TRDDAT.INC  XAPK.INC  XAPK.INC.F90  XCARDS.INC  XCARDS.INC.F90  XCHARS.INC.F90  XCOMPD.INC.F90  XCONST.INC.F90  XDAVAL.INC.F90  XDISC.INC.F90  XDISCB.INC.F90  XERRRS.INC  XERVAL.INC.F90  XIOBUF.INC.F90  XL26WK.INC  XLEXCH.INC  XLEXCH.INC.F90  XLEXIC.INC  XLEXIC.INC.F90  XLINK.INC.F90  XLISTI.INC  XLISTI.INC.F90  XLST01.INC.F90  XLST02.INC.F90  XLST03.INC.F90  XLST05.INC.F90  XLST06.INC.F90  (+119 more)
crystals/electron-diffraction/: commands.copy  lists4.Copy  punch.Copy
crystals/old-back-files/: reductio.bad
datafiles/: CMakeLists.txt  commands.src  crystals.ssr  dscbuild.cmake  guimenu.ssr  infotabs.ssr  maintoolbar.ssr  menu-analyse.ssr  menu-appearance.ssr  menu-fourier.ssr  menu-graphics.ssr  menu-help.ssr  menu-refine.ssr  menu-results.ssr  menu-structure.ssr  menu-tools.ssr  menu-xray.ssr  modeltools.ssr  popup-atom.ssr  popup-noatom.ssr  popup-selection.ssr
docs/: conf.py
docs/crystals/: sfls.rst
e/: CPackConfig.cmake  CPackSourceConfig.cmake  cameron.srt  commands.dsc  crdelbf.bat  crystals.srt  infotabs.srt  maintoolbar.srt  menu-appearance.srt  menu-file.srt  menu-fourier.srt  menu-results.srt  menu-structure.srt  menu-tools.srt  menu-xray.srt
e/MCE/: DefaultSettings.txt  MCE - Marching Cube ELD.url  MCE_VRML_head.def  Settings.txt  source_code.txt
e/datafiles/: commands.dsc  commands.src  deleteme.mon  fort.8
e/script/: OxDiffin.scp  aGetParamsBond.scp  aGetParamsSelection.scp  a_changeSortOrder.scp  a_checkAssembly.scp  (+74 more)
gui/: CMakeLists.txt  ccchartdoc.cpp  cccontroller.cpp  cccontroller.h  cclistenerperformer.h  cclock.cpp  ccmenuitem.cpp  ccmenuitem.h  ccmodelatom.cpp  ccmodelatom.h  ccmodelbond.cpp  ccmodelbond.h  ccmodeldoc.cpp  ccmodeldoc.h  ccmodeldonut.cpp  ccmodeldonut.h  ccmodelobject.h  ccmodelrotor.cpp  ccmodelrotor.h  ccmodelsphere.cpp  ccmodelsphere.h  ccplotbar.cpp  ccplotdata.cpp  ccplotscatter.cpp  ccrect.cpp  ccrect.h  crconstants.h  crdropdown.cpp  creditbox.cpp  crhidden.cpp  cricon.cpp  cricon.h  crmenu.cpp  crmenubar.cpp  crmodel.cpp  crmodel.h  crmodlist.cpp  crmodlist.h  crmultiedit.cpp  crmultiedit.h  (+41 more)
manual/: CMakeLists.txt  crystals.man  doc.man  mangen.pl
newdocs/: CMakeLists.good  CMakeLists.txt  Crystallographic su according Joint Committee for Guides in Metrology.eml  Manual-tree.html  anaconda.bat  bmp.lis  cameron.rst  cameron.txt  chapter-1.rst  chapter-2.rst  chapter-3.rst  conf.py.in  create.bat  crystals-bmp.lis  crystalsmanual.rst  genindex.rst  grep-index.lis  grep-index.txt  index-table.bit  index.rst  interface.rst  macros.bit  my-py.in  primer.rst  userguide.rst
pFunit/: CMakeLists.txt
precomp/: CMakeLists.txt
py/: CMakeLists.txt
script/: CMakeLists.txt  OxDiffin.ssc  Peng.sda  aGetParamsAtom.ssc  a_addCentroid.ssc  a_bondSValMenu.ssc  a_calcMolax.ssc  a_findCommonAtom.ssc  a_getBondsAngles.ssc  a_orthoAtoms.ssc  a_remShiftl.ssc  a_splitJoin.ssc  a_xdscman.ssc  acta.ssc  addtwin.ssc  args.py  assess5.ssc  atomscif.ssc  call-tool-help.ssc  choosevar.ssc  compute.py  copy67.ssc  creg.py  delgrp2.ssc  difabs.ssc  diffexec.ssc  discamb.py  discamb.ssc  dlist.ssc  ed25.ssc  ed30.ssc  edbonds.ssc  edlist12.ssc  edlist16.ssc  edlist5.ssc  electrons.py  escatt.sda  export.ssc  f0_CromerMann.sda  flack-help.ssc  (+154 more)
script/not_used/: newstart.ssc  percent-lines.txt
sginfo/: sginfo.F90  sgio.c
test_suite/: amp.tst  cif.tst  compare.bat  cuoac.cif_od  cuoac.hkl  cuoac.ins  diffin.tss  diffin.tst  diffin2.tss  diffin2.tst  diffin3.tss  diffin3.tst  flack.tst  fort.123  ks.cif_od  lexical.tst  sg.cif_od  sgd464.tst  shapering.tst  shelx2cry.tss  sphere.in  td-tors.tst  test3.tst  testsuite.pl
userguide/: commandline.html  examples.html  faqs.html  gettingstarted.html  install.html  userinterface.html
wx2/: CPackConfig.cmake  CPackSourceConfig.cmake  cameron.srt  crystals.srt  crystalscl.ilk  guimenu.srt  maintoolbar.srt  menu-analyse.srt  menu-appearance.srt  menu-file.srt  menu-help.srt  menu-structure.srt  menu-tools.srt  modeltools.srt
(+1280 files in other folders)
